--- a/about.html
+++ b/about.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Hotelli veeb</title>
-    <meta name="description" content="Õpime veebitehnoloogiat" />
-    <meta name="keywords" content="HTML,CSS,HTML5,CSS3" />
-    <meta name="author" content="Laura-Liis Parm" />
-    <link rel="stylesheet" href="styles.css" />
-
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hotell | Kontakt</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script
+      src="https://kit.fontawesome.com/d5dbbe2da1.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 500px)"
+      href="css/mobile.css"
+    />
+    <title>Hotell | Kirjeldus</title>
   </head>
 
   <body>
@@ -25,5 +30,52 @@
         </div>
       </nav>
     </header>
+
+    <section id="about-info" class="bg-light py-30">
+      <div class="container">
+        <div class="info-left">
+          <h1>VOCO <span class="text-primary">Kirjeldus</span></h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Exercitationem ea animi consectetur, eum earum explicabo facere
+            atque quam, numquam nobis saepe magni, inventore laborum nam
+            repellendus aperiam voluptas a ut!
+          </p>
+        </div>
+        <div class="info-right">
+          <img src="/img/photo-2.jpg" alt="Hotell" />
+        </div>
+      </div>
+    </section>
+
+    <section id="testimonials" class="py-30">
+      <div class="container">
+        <h2>Külaliste Arvamused</h2>
+        <div class="testimonial bg-primary">
+          <img src="/img/person-1.jpg" alt="Liisa" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            earum, dolorem est, laudantium veniam temporibus molestiae, possimus
+            doloribus aliquid dolore eveniet perspiciatis ab deserunt.
+            Consequuntur, quas? Provident eligendi cum inventore.
+          </p>
+        </div>
+        <div class="testimonial bg-primary">
+          <img src="/img/person-2.jpg" alt="Liina" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            earum, dolorem est, laudantium veniam temporibus molestiae, possimus
+            doloribus aliquid dolore eveniet perspiciatis ab deserunt.
+            Consequuntur, quas? Provident eligendi cum inventore.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <div class="clear"></div>
+
+    <footer>
+      <p>VOCO &copy;2025, Kõik Õigused On Kaitstud</p>
+    </footer>
   </body>
 </html>
