--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script
+      src="https://kit.fontawesome.com/d5dbbe2da1.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 500px)"
+      href="css/mobile.css"
+    />
     <title>Hotell | Avaleht</title>
   </head>
 
@@ -24,17 +33,72 @@
       <div id="showcase">
         <div class="container">
           <div class="showcase-content">
-            <h1>Tere Tulemast VOCO Hotelli!</h1>
+            <h1>
+              <span class="text-primary">Tere Tulemast</span> VOCO Hotelli!
+            </h1>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe
               minima incidunt fugit hic quasi aut ipsum ullam vero dolorum harum
               doloremque dolore, rerum impedit! Veniam aliquid sequi
               voluptatibus illo doloribus?
             </p>
-            <a href="about.html">Rohkem meist</a>
+            <a class="btn" href="about.html">Rohkem meist</a>
           </div>
         </div>
       </div>
     </header>
+
+    <section id="info" class="bg-dark">
+      <div class="info-img"></div>
+      <div class="info-content">
+        <h2><span class="text-primary">Ajalugu</span></h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate
+          accusamus earum odio qui. Perferendis recusandae eos atque reiciendis
+          corrupti. Non dolorum dignissimos iste aperiam nostrum eius incidunt
+          sed libero deserunt?
+        </p>
+        <a class="btn btn-light" href="about.html">Loe rohkem</a>
+      </div>
+    </section>
+
+    <section id="features">
+      <div class="box bg-light">
+        <i class="fa-solid fa-hotel"></i>
+        <h3>Asukoht</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+          quidem suscipit minima adipisci quam accusamus labore voluptatum,
+          necessitatibus, laborum rerum a velit! Nostrum fugiat doloribus
+          mollitia perspiciatis optio totam autem.
+        </p>
+      </div>
+      <div class="box bg-primary">
+        <i class="fa-solid fa-utensils"></i>
+        <h3>Söök</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+          quidem suscipit minima adipisci quam accusamus labore voluptatum,
+          necessitatibus, laborum rerum a velit! Nostrum fugiat doloribus
+          mollitia perspiciatis optio totam autem.
+        </p>
+      </div>
+      <div class="box bg-light">
+        <i class="fa-solid fa-dumbbell"></i>
+        <h3>Sport</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+          quidem suscipit minima adipisci quam accusamus labore voluptatum,
+          necessitatibus, laborum rerum a velit! Nostrum fugiat doloribus
+          mollitia perspiciatis optio totam autem.
+        </p>
+      </div>
+    </section>
+
+    <div class="clear"></div>
+
+    <footer>
+      <p>VOCO &copy;2025, Kõik Õigused On Kaitstud</p>
+    </footer>
   </body>
 </html>
