--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hotell | Kirjeldus</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script
+      src="https://kit.fontawesome.com/d5dbbe2da1.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 500px)"
+      href="css/mobile.css"
+    />
+    <title>Hotell | Kontakt</title>
   </head>
   <body>
     <header>
@@ -18,5 +29,53 @@
         </div>
       </nav>
     </header>
+
+    <section id="contact-form" class="py-30">
+      <div class="container">
+        <h1>Võta <span class="text-primary">Meiega</span> Ühendust</h1>
+        <p>Palun täida all olev vorm</p>
+        <form action="">
+          <div class="form-group">
+            <label for="name">Nimi</label>
+            <input type="text" id="name" />
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" />
+          </div>
+          <div class="form-group">
+            <label for="message">Sõnum</label>
+            <textarea id="message"></textarea>
+          </div>
+          <button type="submit" class="btn">Saada</button>
+        </form>
+      </div>
+    </section>
+
+    <section id="contact-info" class="bg-dark">
+      <div class="container">
+        <div class="box bg-dark">
+          <i class="fa-solid fa-hotel"></i>
+          <h3>Aadress</h3>
+          <p>Kopli 1A, Tartu</p>
+        </div>
+        <div class="box bg-dark">
+          <i class="fa-solid fa-phone"></i>
+          <h3>Telefon</h3>
+          <p>0000 0000</p>
+        </div>
+        <div class="box bg-dark">
+          <i class="fa-solid fa-envelope"></i>
+          <h3>E-post</h3>
+          <p>info@voco.ee</p>
+        </div>
+      </div>
+    </section>
+
+    <div class="clear"></div>
+
+    <footer>
+      <p>VOCO &copy;2025, Kõik Õigused On Kaitstud</p>
+    </footer>
   </body>
 </html>
