--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
           </p>
         </div>
         <div class="info-right">
-          <img src="/img/photo-2.jpg" alt="Hotell" />
+          <img src="../img/photo-2.jpg" alt="Hotell" />
         </div>
       </div>
     </section>
@@ -52,7 +52,7 @@
       <div class="container">
         <h2>Külaliste Arvamused</h2>
         <div class="testimonial bg-primary">
-          <img src="/img/person-1.jpg" alt="Liisa" />
+          <img src="../img/person-1.jpg" alt="Liisa" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
             earum, dolorem est, laudantium veniam temporibus molestiae, possimus
@@ -61,7 +61,7 @@
           </p>
         </div>
         <div class="testimonial bg-primary">
-          <img src="/img/person-2.jpg" alt="Liina" />
+          <img src="../img/person-2.jpg" alt="Liina" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
             earum, dolorem est, laudantium veniam temporibus molestiae, possimus
